package org.example;

public enum VehicleType {
    CAR, BUS, TRUCK
}

