package org.example.displayPanel;

abstract class DisplayPanel {
    public abstract void display();
}
